# Y-combinator

./: LICENSE  README.md
.github/workflows/: ccpp.yml
include/: Y.h
test/: CMakeLists.txt  Makefile  main.cpp
